add_library(ahfl_durable_store_import STATIC
    adapter_execution.cpp
    decision.cpp
    decision_review.cpp
    provider_approval_workflow.cpp
    provider_config.cpp
    provider_conformance.cpp
    receipt.cpp
    receipt_persistence.cpp
    receipt_persistence_response.cpp
    receipt_persistence_response_review.cpp
    receipt_persistence_review.cpp
    provider_adapter.cpp
    provider_driver.cpp
    provider_host_execution.cpp
    provider_local_filesystem_alpha.cpp
    provider_audit.cpp
    provider_compatibility.cpp
    provider_local_host_execution.cpp
    provider_local_host_harness.cpp
    provider_production_readiness.cpp
    provider_registry.cpp
    provider_runtime.cpp
    provider_sdk_adapter.cpp
    provider_sdk_interface.cpp
    provider_sdk_mock_adapter.cpp
    provider_sdk_payload.cpp
    provider_secret.cpp
    provider_sdk.cpp
    provider_retry.cpp
    provider_recovery.cpp
    provider_failure_taxonomy.cpp
    provider_schema_compatibility.cpp
    provider_commit.cpp
    provider_config_bundle_validation.cpp
    provider_opt_in_guard.cpp
    provider_runtime_policy.cpp
    provider_production_integration_dry_run.cpp
    provider_release_evidence_archive.cpp
    recovery_preview.cpp
    receipt_review.cpp
    request.cpp
    review.cpp
)

target_link_libraries(ahfl_durable_store_import
    PUBLIC
        ahfl_store_import
)

ahfl_apply_project_warnings(ahfl_durable_store_import)
